Add project page

--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8"></meta>
-    <title>Your boyfriend sucks</title>
+    <title>Project page</title>
   </head>
   <body>
     {{> pageTitle}}
-    <p>Nothing to say on about page</p>
+    <a href="#">Project link</a>
     {{> footer}}
   </body>
 </html>
