--- a/views/partials/pageTitle.hbs
+++ b/views/partials/pageTitle.hbs
@@ -1,5 +1,9 @@
 <header>
   <h1>{{pageTitle}}</h1>
-  <a href="/">Home</a>
-  <a href="/about">About</a>
+  <ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="/about">About</a></li>
+    <li><a href="/projects">Projects</a></li>
+  </ul>
+
 </header>
